updated the hobbies url

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <table cellspacing='10'>
     <thead>
       <tr>
-        <td><strong><em><a href="C:\Web Development\html - personal site\hobbies.html">hobbies</a></em></strong></td>
+        <td><strong><em><a href="hobbies.html">hobbies</a></em></strong></td>
         <td><strong><em>Timings</em></strong></td>
       </tr>
     </thead>
