updated the Images folder name in src

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing='30'>
     <tr>
-      <td> <img src="images/siva.png" alt="Siva prasad's Image" height="200" width="200" /></td>
+      <td> <img src="Images/siva.png" alt="Siva prasad's Image" height="200" width="200" /></td>
       <td>
         <h1>Siva Prasad Turaka</h1>
         <h3>You can contact me <strong><em><a href="contact.html">here</a></em></strong></h3>
