--- a/index.html
+++ b/index.html
@@ -3,102 +3,68 @@
 
 <head>
   <meta charset="utf-8">
-  <title> Siva's personal site </title>
+  <title>Siva's website</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik+Maze&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <table cellspacing='30'>
-    <tr>
-      <td> <img src="Images/siva.png" alt="Siva prasad's Image" height="200" width="200" /></td>
-      <td>
-        <h1>Siva Prasad Turaka</h1>
-        <h3>You can contact me <strong><em><a href="contact.html">here</a></em></strong></h3>
-        <p><em>Student at <strong>Korm College of Engineering</string></em></p>
-        <p>Hey guys! My name is siva prasad and I am a student of <strong>KORMCE</strong>
-          and I have persued my B.Tech form <em>CSE</em> on June 2022.</p>
-        <p>This is a part of the course
-          which i have taken up to become a <strong>FULL STACK DEVELOPER</strong></p>
-      </td>
-    </tr>
-  </table>
-  <hr />
-  <h1>Personal Information</h1>
-  <ol>
-    <h3>Education</h3>
-    <ol>
-      <li> 10 at <strong>Pavan Concept School</strong></li>
-      <li> Intermediate at Sri Chaitanya Junior College</li>
-      <li> B.Tech at <strong> <em> <a href="https://content3.jdmagicbox.com/comp/kadapa/dc/9999p8562.8562.1224138153i5x2p8.dc/catalogue/korm-college-of-engineering-vinayaka-nagar-junction-kadapa-colleges-vl2uzaf-250.jpg">KORM College Of Engineering</a></em></strong>
-      </li>
-    </ol>
-    <br>
-    <h3>Certificates</h3>
-    <ul>
-      <li>Planned to do a certification course on <a href="https://www.tutorialspoint.com/java/index.htm"><strong><em>Java</em></strong> </a></li>
-      <li>Planned to a certification course on <a href="https://www.greycampus.com/blog/programming/full-stack-developer-guide"><em><strong>Full Stack</strong></em></a> </li>
-    </ul>
-  </ol>
-  <hr>
-  <br>
-  <table cellspacing='10'>
-    <thead>
-      <tr>
-        <td><strong><em><a href="hobbies.html">hobbies</a></em></strong></td>
-        <td><strong><em>Timings</em></strong></td>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>DS and algo practise</td>
-        <td>6.30AM to 12 PM (Including breaks)</td>
-      </tr>
-      <tr>
-        <td>Full Stack Develpment</td>
-        <td>4.30 PM to 10.30 PM(Including breaks)</td>
-      </tr>
-      <tr>
-        <td>sleep</td>
-        <td>11 PM to 5.45 AM(Breaks)</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr>
-  <h3>SKILLS</h3>
-  <table cellspacing='10'>
-    <tr>
-      <td>
-        <table cellspacing='20' >
-          <tr>
-            <td><strong>JAVA</strong></td>
-            <td>⭐⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td><strong>C PROGRAMMING</strong></td>
-            <td>⭐⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td><strong>HTML</strong></td>
-            <td>⭐⭐⭐⭐</td>
-          </tr>
-        </table>
-      </td>
-      <td>
-        <table cellspacing='20' <tr>
-          <td><strong>English Communications</strong></td>
-          <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td><strong> Verbal Ability</strong></td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td><strong>Leadership Skills</strong></td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-  </table>
-  </td>
-  </tr>
-  </table>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud's pic">
+    <h1>I'm Siva</h1>
+    <h2>
+      <span class="empty">Empty </span><span class="Full"> Full</span> stack student
+    </h2>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud's pic">
+    <img src="images/mountain.png" alt="mountain's pic">
+  </div>
+
+  <div class="middle-container">
+    <div class="profile">
+      <img class="siva-profile" src="images/siva profile.jpg" alt="my pic">
+      <h2>Hello.</h2>
+      <p class="intro">This is siva, I'm a B.Tech Graduate form KORM and I love Computer Science and currently learning FULL STACK
+        Development.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills</h2>
+      <div class="skill-row">
+        <img class="java-image" src="https://cdn-icons-png.flaticon.com/512/644/644609.png" alt="java">
+        <h3 >JAVA</h3>
+        <p>System.out.print(<span class="ilovejava">"I love Java"</span>);</p>
+      </div>
+      <div class="skill-row">
+        <img class="frontend-image" src="https://cdn-icons-png.flaticon.com/512/2620/2620971.png" alt="frontend">
+        <h3 >Frontend Development</h3>
+        <p>Honestly I am still in learning stage ☹️, but getting better everyday 😄😁.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Are you like me ??  :) </h3>
+      <p class="contact-msg">If you are regretting about the time you have wasted and want to change it , welcome to the party bro !!.</p>
+      <button class="btn" href="sivaprasad.turaka2001@gmail.com">CONTACT ME</button>
+    </div>
+  </div>
+
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p class="final-desc">2022 © Siva Prasad Turaka @ kadapa.</p>
+  </div>
+
+
 </body>
 
 </html>
